--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,6 +4,6 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:17-jdk
 
-COPY --from=build target/AxelSpin-0.0.1-SNAPSHOT.jar AxelSpin.jar
+COPY --from=build target/AxelSpin-0.0.1-SNAPSHOT.jar /AxelSpin.jar
 
-ENTRYPOINT ["java", "-jar", "AxelSpin.jar"]
+ENTRYPOINT ["java", "-jar", "/AxelSpin.jar"]
